Fix generating css for multiple tokens in one theme

--- a/src/components/ThemeProvider/__stories__/ThemeProvider.stories.mdx
+++ b/src/components/ThemeProvider/__stories__/ThemeProvider.stories.mdx
@@ -45,16 +45,20 @@ Please write here the component description
         name: "overview-theme",
         colors: {
           [SystemTheme.LIGHT]: {
-            [Color.primaryColor]: "green"
+            [Color.primaryColor]: "green",
+            [Color.primaryHoverColor]: "green"
           },
           [SystemTheme.DARK]: {
-            [Color.primaryColor]: "red"
+            [Color.primaryColor]: "red",
+            [Color.primaryHoverColor]: "red"
           },
           black: {
-            "primary-color": "orange"
+            "primary-color": "orange",
+            "primary-hover-color": "orange"
           },
           hacker: {
-            "primary-color": "yellow"
+            "primary-color": "yellow",
+            "primary-hover-color": "yellow"
           }
         }
       }
