feat(Table): add TableContainer component to allow overflow without hurting style and overflow
this component should be used for all cases, except for specific ones where consumer want to override default behavior of overflow/have infinite table/etc.

--- a/src/components/Table/Table/__stories__/table.stories.mdx
+++ b/src/components/Table/Table/__stories__/table.stories.mdx
@@ -196,6 +196,11 @@ Table with both vertical and horizontal scroll
 
 <Canvas>
   <Story name="Scroll">
+    {
+      {
+        /* styles.scrollTable = height: 220px; width: 800px to enforce scrolling container */
+      }
+    }
     <TableContainer className={styles.scrollTable}>
       <Table errorState={<TableErrorState />} emptyState={<TableEmptyState />} columns={scrollTableColumns}>
         <TableHeader>
