--- a/src/components/Combobox/__stories__/combobox.stories.mdx
+++ b/src/components/Combobox/__stories__/combobox.stories.mdx
@@ -261,8 +261,8 @@ You can also provide custom colors for your headings.
       );
       const categories = useMemo(
         () => ({
-          favorites: { id: "red", label: "I'm red", color: "red" },
-          workspace: { id: "yellow", label: "I'm yellow", color: "yellow" }
+          red: { id: "red", label: "I'm red", color: "red" },
+          yellow: { id: "yellow", label: "I'm yellow", color: "yellow" }
         }),
         []
       );
